* refactor existing environment bindings to new environment system